--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "node app.js",
-    "client" : "npm start --prfix client",
-    "dev" : "concurrently \"npm start\" \"npm run client\" "
+    "client" : "npm start --prefix Frontend"
   },
   "keywords": [],
   "author": "",
