--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,5 @@
 MONGO_URL = mongodb+srv://Khizar:12121212@cluster0.oycws9d.mongodb.net/Clinic?retryWrites=true&w=majority
 EMAIL="khizarshh05@gmail.com"
 PASSWORD="zxbieylwopknovat"
-PORT = 5000
+JWT_SECRET="supersecret"
+PORT= 5000
