--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node app.js",
-    "client" : "npm start --prefix Frontend"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
     "nodemailer": "^6.9.4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   }
 }
